--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,5 +16,5 @@ jobs:
     - name: Deploy to GitHub Pages
       uses: peaceiris/actions-gh-pages@v3
       with:
-        deploy_key: ${{ secrets.API_KEK }}
+        api_key: ${{ secrets.API_KEY }}
         publish_dir: ./  # Adjust this if your build output is in a different directory
