--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -7,5 +7,5 @@ jobs:
         steps:
             - run: echo "Cool test!"
             - name: Check out repo code?
-            - uses: actions/checkout@v4
+              uses: actions/checkout@v4
             - run: ls ${{ github.workspace }}
