--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -7,6 +7,5 @@ jobs:
         steps:
             - name: Check out repo
               uses: actions/checkout@v4
-            - run cd ${{ github.workspace }}
-            - run ls
-            
+            - run: cd ${{ github.workspace }}
+            - run: ls
