--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -8,5 +8,6 @@ jobs:
             - name: Check out repo
               uses: actions/checkout@v4
             - run: cd ${{ github.workspace }}
-            - run: touch test.file
+            - run: cd mindmaps/electricity
+            - run: curl -fssL https://github.com/Nathan3-14/yaml-mindmap/blob/main/convert.py?raw=true
             - run: ls
