--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -7,6 +7,7 @@ jobs:
         steps:
             - name: Check out repo
               uses: actions/checkout@v4
+            - name: Do stuff
             - run: cd ${{ github.workspace }}/mindmaps
             - run: ls
             - run: curl -fssL https://github.com/Nathan3-14/yaml-mindmap/blob/main/convert.py?raw=true | echo > "test.py"
