Added git commit test

--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -11,3 +11,5 @@ jobs:
             - run: ls mindmaps/electricity
             - run: curl -fssL https://github.com/Nathan3-14/yaml-mindmap/blob/main/convert.py?raw=true | echo > mindmaps/electricity/convert.py
             - run: python ./mindmaps/electricity/convert.py ./mindmaps/electricity/electricity.yml ./mindmaps/electricity/output.md
+            - run: git add ./mindmaps/electricity/output.md
+            - run: git commit -m "(action) Updated output.md"
