--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -9,15 +9,18 @@ jobs:
               uses: actions/checkout@v4
             
             - name: Convert Yaml
-              run: cd ${{ github.workspace }}
-              run: ls mindmaps/electricity
-              run: curl -fssL https://github.com/Nathan3-14/yaml-mindmap/blob/main/convert.py?raw=true | echo > mindmaps/electricity/convert.py
-              run: python ./mindmaps/electricity/convert.py ./mindmaps/electricity/electricity.yml ./mindmaps/electricity/output.md
+              run: |
+                cd ${{ github.workspace }}
+                ls mindmaps/electricity
+                curl -fssL https://github.com/Nathan3-14/yaml-mindmap/blob/main/convert.py?raw=true | echo > mindmaps/electricity/convert.py
+                python ./mindmaps/electricity/convert.py ./mindmaps/electricity/electricity.yml ./mindmaps/electricity/output.md
             
             - name: Git Setup
-              run: git config user.name "GitHub Actions Bot"
-              run: git config user.email "<>"
+              run: |
+                git config user.name "GitHub Actions Bot"
+                git config user.email "<>"
 
             - name: Git
-              run: git add ./mindmaps/electricity/output.md
-              run: git commit -m "(action) Updated output.md"
+              run: |
+                git add ./mindmaps/electricity/output.md
+                run: git commit -m "(action) Updated output.md"
