--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -13,7 +13,7 @@ jobs:
                 cd ${{ github.workspace }}
                 curl -fssL https://github.com/Nathan3-14/yaml-mindmap/blob/main/convert.py?raw=true | echo > mindmaps/electricity/convert.py
                 python ./mindmaps/electricity/convert.py ./mindmaps/electricity/electricity.yml output.md
-                ls /mindmaps/electricity
+                ls ./mindmaps/electricity
                 echo "   "
                 ls
                 rm ./mindmaps/electricity/convert.py
