--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -27,8 +27,7 @@ jobs:
             - name: Get File
               run: |
                 ls ./mindmaps/electricity
-                echo "   "
-                ls
+                cat ./mindmaps/convert.py
               
             - name: Git Setup
               run: |
