--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -21,6 +21,7 @@ jobs:
                 curl -o ./mindmaps/electricity/convert.py https://github.com/Nathan3-14/yaml-mindmap/blob/main/convert.py?raw=true
                 echo "waiting"
                 cat ./mindmaps/electricity/convert.py
+                echo "done"
             
             - name: Execute
               run: |
