--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -18,9 +18,9 @@ jobs:
             - name: Get File
               run: |
                 cd ${{ github.workspace }}
-                curl -o ./mindmaps/electricity/convert.py https://github.com/Nathan3-14/yaml-mindmap/blob/main/convert.py?raw=true
+                wget -c https://raw.githubusercontent.com/Nathan3-14/yaml-mindmap/main/convert.py
                 echo "waiting"
-                cat ./mindmaps/electricity/convert.py
+                cat ./convert.py
                 echo "done"
             
             - name: Execute
