--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -18,9 +18,9 @@ jobs:
             - name: Get File
               run: |
                 cd ${{ github.workspace }}
-                wget -c https://raw.githubusercontent.com/Nathan3-14/yaml-mindmap/main/convert.py
+                wget -O ./mindmaps/electricity/convert.py -c https://raw.githubusercontent.com/Nathan3-14/yaml-mindmap/main/convert.py
                 echo "waiting"
-                cat ./convert.py
+                cat ./mindmaps/electricity/convert.py
                 echo "done"
             
             - name: Execute
