--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -15,6 +15,11 @@ jobs:
               with:
                 python-version: 3.10.11
             
+            - name: Download Dependencies
+              run: |
+                python -m pip install -U pip
+                python -m pip install yaml
+            
             - name: Get File
               run: |
                 cd ${{ github.workspace }}
