--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -18,7 +18,7 @@ jobs:
             - name: Download Dependencies
               run: |
                 python -m pip install -U pip
-                python -m pip install yaml
+                python -m pip install pyyaml
             
             - name: Get File
               run: |
