--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -33,7 +33,7 @@ jobs:
             - name: Git Setup
               run: |
                 git config user.name "GitHub Actions Bot"
-                git config user.email "<>"
+                git config user.email "nathan3-14@users.noreply.github.com"
 
             - name: Git
               run: |
