Added potential difference Added resistance

--- a/mindmaps/electricity/electricity.yaml
+++ b/mindmaps/electricity/electricity.yaml
@@ -4,16 +4,24 @@ Electricity:
       - Rate of flow of charge (rate of flow of electrons)
       - Shared across elements in parallel
       - Same across elements in series
-    Potential Difference:
-      - Amount of energy transferred per unit charge
-      - Same across elements in parallel
-      - Shared across elements in series
     Charge Flow:
       - The number of electrons
     Equation:
       - Q = I * t
       - charge (C) = current (A) * time (s)
       - current (A) = charge (C) / time (s)
+    Other:
+      Potential Difference:
+        - Amount of energy transferred per unit charge
+        - Same across elements in parallel
+        - Shared across elements in series
+      Resistance:
+        - How difficult it is for current to flow through a circuit or component
+        - Summed in series
+        - Bit less than smallest value in parallel
+      Equation:
+        - V = IR
+        - potential difference (V) = current (A) * resistance (Ω)
   Circuit Symbols:
     i--:
       Battery:
