--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -78,4 +78,5 @@ jobs:
           run: |
             git add ./mindmaps/electricity/index.html
             git commit -m "(action) Updated index.html"
+            git status
             git push
