--- a/mindmaps/electricity/electricity.yaml
+++ b/mindmaps/electricity/electricity.yaml
@@ -23,16 +23,15 @@ Electricity:
         - V = IR
         - potential difference (V) = current (A) * resistance (Ω)
   Circuit Symbols:
-    i--:
-      Battery:
-        - https://github.com/Nathan3-14/Science-Mindmap/blob/main/images/battery.png?raw=true
-      Cell:
-        - https://github.com/Nathan3-14/Science-Mindmap/blob/main/images/cell.png?raw=true
-      Diode:
-        - https://github.com/Nathan3-14/Science-Mindmap/blob/main/images/diode.png?raw=true
-      Lamp:
-        - https://github.com/Nathan3-14/Science-Mindmap/blob/main/images/lamp.png?raw=true
-      LED:
-        - https://github.com/Nathan3-14/Science-Mindmap/blob/main/images/led.png?raw=true
-      Switch:
-        - https://github.com/Nathan3-14/Science-Mindmap/blob/main/images/switch.png?raw=true
+    Battery:
+      - Battery
+    Cell:
+      - Cell
+    Diode:
+      - Diode
+    Lamp:
+      - Lamp
+    LED:
+      - LED
+    Switch:
+      - Switch
