--- a/.github/workflows/fix-html.yml
+++ b/.github/workflows/fix-html.yml
@@ -3,7 +3,7 @@ run-name: Fix HTML
 on:
     push:
         paths:
-            - converter/**
+            - mindmaps/electricity/index.html
         
 jobs:
     Fix-Html:
