--- a/.github/workflows/git-branch.yml
+++ b/.github/workflows/git-branch.yml
@@ -18,6 +18,6 @@ jobs:
           touch ./aaa.aaa
           git add ./aaa.aaa
 
-          git push -u Test -m "Test"
+          git push -u Test
     
             
