--- a/.github/workflows/git-branch.yml
+++ b/.github/workflows/git-branch.yml
@@ -15,10 +15,11 @@ jobs:
         run: |
           git branch Test
 
+          git push -u origin Test
+          
+          git pull
           touch ./aaa.aaa
           git add ./aaa.aaa
-
-          git push -u origin Test
           git push -m "TESTTEST"
     
             
