--- a/.github/workflows/git-branch.yml
+++ b/.github/workflows/git-branch.yml
@@ -16,7 +16,9 @@ jobs:
           git branch Test
 
           git push -u origin Test
-          
+      
+      - name: extra commit
+        run: |
           git pull
           touch ./aaa.aaa
           git add ./aaa.aaa
