--- a/.github/workflows/git-branch.yml
+++ b/.github/workflows/git-branch.yml
@@ -23,6 +23,8 @@ jobs:
           git pull
           git push -u origin Test
 
+      - name: aaa
+        run: |
           touch ./aaa.aaa
           git add ./aaa.aaa
           
