--- a/.github/workflows/md-to-html.yml
+++ b/.github/workflows/md-to-html.yml
@@ -3,6 +3,8 @@ run-name: Convert md to html
 on: 
   push:
     branches: [ main ]
+    paths:
+      - /mindmaps/electricity/**
 jobs:
     Convert-yaml:
         runs-on: ubuntu-latest
