--- a/.github/workflows/fix-html.yml
+++ b/.github/workflows/fix-html.yml
@@ -1,39 +1,39 @@
 name: Fix HTML
 run-name: Fix HTML
-on:
-    push:
-        paths:
-            - mindmaps/**
+on: 
+  push:
+    paths:
+      - /mindmaps/**
         
 jobs:
-    Fix-Html:
-        runs-on: ubuntu-latest
-        steps:
-            - name: checkout
-              uses: actions/checkout@v4
+  Fix-Html:
+    runs-on: ubuntu-latest
+    steps:
+      - name: checkout
+        uses: actions/checkout@v4
 
-            - name: Setup
-              run: |
-                cd ${{ github.workspace }}
-                python -m pip install -U pip
-                python -m pip install -r ./requirements.txt
-            - name: Fix Mindmap
-              run: |
-                python ./mindmaps/electricity/convert-html.py
+      - name: Setup
+        run: |
+          cd ${{ github.workspace }}
+          python -m pip install -U pip
+          python -m pip install -r ./requirements.txt
+      - name: Fix Mindmap
+        run: |
+          python ./mindmaps/electricity/convert-html.py
             
-            - name: Git Fix
-              run: |
-                git rm --cached ./mindmaps/electricity/index.html
-                git reset ./mindmaps/electricity/index.html
+      - name: Git Fix
+        run: |
+          git rm --cached ./mindmaps/electricity/index.html
+          git reset ./mindmaps/electricity/index.html
 
 
-            - name: Git Setup
-              run: |
-                git config user.name "GitHub Actions Bot"
-                git config user.email "nathan3-14@users.noreply.github.com"
+      - name: Git Setup
+        run: |
+          git config user.name "GitHub Actions Bot"
+          git config user.email "nathan3-14@users.noreply.github.com"
         
-            - name: Git
-              run: |
-                git add ./mindmaps/electricity/index.html
-                git commit -m "(action) Upgraded index.html"
-                git push
+      - name: Git
+        run: |
+          git add ./mindmaps/electricity/index.html
+          git commit -m "(action) Upgraded index.html"
+          git push
