--- a/mindmaps/electricity/electricity.yaml
+++ b/mindmaps/electricity/electricity.yaml
@@ -1,4 +1,9 @@
 Electricity:
+  Super Cool Branch!!!!!:
+    Awesome:
+      - Cool
+      - amazing
+      - poop
   Current and Charge:
     Current:
       - Rate of flow of charge (rate of flow of electrons)
